// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the Checkbox executes callback 1`] = `
Array [
  .c0 {
  margin-right: 0.5em;
}

<input
    className="c0"
    id="testCallback"
    onChange={[Function]}
    type="checkbox"
/>,
  <label
    htmlFor="testCallback"
>
    testCallbackLabel
</label>,
]
`;

exports[`the Checkbox executes callback 2`] = `
Array [
  .c0 {
  margin-right: 0.5em;
}

<input
    className="c0"
    id="testCallback"
    onChange={[Function]}
    type="checkbox"
/>,
  <label
    htmlFor="testCallback"
>
    testCallbackLabel
</label>,
]
`;

exports[`the Checkbox executes callback when the state changes 1`] = `
Array [
  .c0 {
  margin-right: 0.5em;
}

<input
    className="c0"
    id="testCallback"
    onChange={[Function]}
    type="checkbox"
/>,
  <label
    htmlFor="testCallback"
>
    testCallbackLabel
</label>,
]
`;

exports[`the Checkbox executes callback when the state changes 2`] = `
Array [
  .c0 {
  margin-right: 0.5em;
}

<input
    className="c0"
    id="testCallback"
    onChange={[Function]}
    type="checkbox"
/>,
  <label
    htmlFor="testCallback"
>
    testCallbackLabel
</label>,
]
`;

exports[`the Checkbox matches the snapshot 1`] = `
Array [
  .c0 {
  margin-right: 0.5em;
}

<input
    className="c0"
    id="test-id"
    onChange={[Function]}
    type="checkbox"
/>,
  <label
    htmlFor="test-id"
>
    test label
</label>,
]
`;

exports[`the Checkbox matches the snapshot when an array is provided as a label 1`] = `
Array [
  .c0 {
  margin-right: 0.5em;
}

<input
    className="c0"
    id="test-id"
    onChange={[Function]}
    type="checkbox"
/>,
  <label
    htmlFor="test-id"
>
    test label 
    using arrays
</label>,
]
`;
